# CorpSeQl

./: .gitignore  .huggingfaceignore  Dockerfile  README.md  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py  test_loop.py
docs/: Architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
server/: app.py
