[project]
name = "corpseql"
version = "1.0.0"
description = "Ethical Hacker - SQL Injection Lifecycle Simulator for AI Agents."
authors = [{ name = "Cognix Team", email = "jainprabhav1437@gmail.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml",
    "openenv-core>=0.2.3"
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Prabhav1437/corpseql"

[tool.setuptools]
packages = ["server"]
